--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,11 +1,41 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap');
 
+:root {
+  --bg-color: rgba(228, 228, 228, 0.212);
+}
 *, *::after, *::before {
   box-sizing: border-box;
-}
-
-body {
   margin: 0;
   padding: 0;
   font-family: 'Poppins', sans-serif;
 }
+
+.container {
+  background-image: url('../img/pexels-thought-catalog-904616.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  text-align: center;
+}
+
+header {
+  margin: 5% 0 5% 0;
+}
+header > h1 {
+  text-transform: uppercase;
+  font-size: 3rem;
+  font-weight: 700;
+}
+header > p {
+  text-transform: lowercase;
+  font-size: 1.1rem;
+}
+
+.line {
+  height: 2px;
+  background-color:rgba(228, 228, 228, 0.443);
+  box-shadow: -90px 66px 0px -5px rgba(0,0,0,0.75);
+    -webkit-box-shadow: -90px 66px 0px -5px rgba(0,0,0,0.75);
+    -moz-box-shadow: -90px 66px 0px -5px rgba(0,0,0,0.75);
+margin-top: 25px;
+}
+
